--- a/docker/node/package.json
+++ b/docker/node/package.json
@@ -12,7 +12,7 @@
     "eslint": "eslint src",
     "eslint-fix": "npm run eslint -- --fix",
     "prepublishOnly": "rollup -c",
-    "start": "node -r esm src/index.js",
+    "start": "nodemon -r esm src/index.js",
     "test": "npm run test-coverage && npm run eslint",
     "test-coverage": "jest --coverage",
     "test-only": "jest"
@@ -45,6 +45,7 @@
     "eslint-config-cheminfo": "^5.2.2",
     "esm": "^3.2.25",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rollup": "^2.35.1"
   },
