--- a/docker/node/package.json
+++ b/docker/node/package.json
@@ -13,6 +13,7 @@
     "eslint-fix": "npm run eslint -- --fix",
     "prepublishOnly": "rollup -c",
     "start": "nodemon -r esm src/index.js",
+    "debug": "DEBUG=weather nodemon -r esm src/index.js",
     "test": "npm run test-coverage && npm run eslint",
     "test-coverage": "jest --coverage",
     "test-only": "jest"
@@ -39,18 +40,19 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@types/jest": "^26.0.19",
-    "eslint": "^7.16.0",
-    "eslint-config-cheminfo": "^5.2.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@types/jest": "^26.0.20",
+    "eslint": "^7.22.0",
+    "eslint-config-cheminfo": "^5.2.3",
     "esm": "^3.2.25",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "rollup": "^2.35.1"
+    "rollup": "^2.41.2"
   },
   "dependencies": {
-    "fastify": "^3.9.2",
+    "debug": "^4.3.1",
+    "fastify": "^3.14.0",
     "node-fetch": "^2.6.1"
   }
 }
